--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background: rgb(125, 198, 205);
-    color: rgb(45, 45, 45);
+    background: rgb(31, 12, 207);
+    color: rgb(104, 94, 94);
     padding: 10px;
     font-family: Arial, sans-serif;
 }
@@ -12,7 +12,7 @@ body {
 
 /* navigation menu */
 nav {
-    background: rgb(239, 80, 41);
+    background: rgb(0, 0, 0);
     margin: 0 auto;
     display: flex;
     padding: 10px;
@@ -45,7 +45,7 @@ a {
 
 /* main container area beneath menu */
 main {
-    background: rgb(245, 238, 219);
+    background: rgb(30, 108, 180);
     display: flex;
     margin-top: 20px;
 }
@@ -66,7 +66,7 @@ main {
 
 /* interests section styles */
 #interests {
-    border: 4px silver ridge;
+    border: 4px rgb(81, 196, 58) ridge;
     padding: 8px;
     margin-top: 20px;
 }
@@ -75,7 +75,7 @@ h2, h3 {
     margin: 0px;
 }
 nav {
-  background: rgb(239, 80, 41);
+  background: rgb(134, 64, 64);
   margin: 0 auto;
   display: flex;
   padding: 10px;
@@ -83,7 +83,7 @@ nav {
 }
 body {
   background: #fff4f4;
-  color: #6e3636;
+  color: #ffffff;
 }
 
 nav {
@@ -91,5 +91,5 @@ nav {
 }
 
 a {
-  color: #ec0606;
+  color: #f70606;
 }
